--- a/views/add_case.ejs
+++ b/views/add_case.ejs
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="/assets/css/date-picker.css">
     <link rel="stylesheet" href="/assets/css/validation.css">
     <link rel="stylesheet" href="/assets/css/toast.css">
+    <link rel="stylesheet" href="/assets/css/custom-select.css">
     <script src="/assets/js/components.js"></script>
     <script src="/assets/js/date-picker.js"></script>
+    <script src="/assets/js/custom-select.js"></script>
 
 </head>
 <body>
@@ -52,8 +54,21 @@
                                 <span class="required-asterisk">*</span>
                                 <span class="label-text">Gender</span>
                             </label>
-                            <div class="select-wrapper">
-                                <select id="patientGender" name="patientGender">
+                            <div class="custom-select-wrapper">
+                                <div class="custom-select" id="patientGender-select">
+                                    <div class="custom-select__trigger">
+                                        <span class="custom-select__placeholder">Select</span>
+                                        <div class="custom-select__arrow">
+                                            <img src="/assets/images/select-icon.svg" alt="Select Tick Icon">
+                                        </div>
+                                    </div>
+                                    <div class="custom-select__options">
+                                        <span class="custom-select__option" data-value="Male">Male</span>
+                                        <span class="custom-select__option" data-value="Female">Female</span>
+                                        <span class="custom-select__option" data-value="Prefer not to say">Prefer not to say</span>
+                                    </div>
+                                </div>
+                                <select id="patientGender" name="patientGender" style="display: none;">
                                     <option value="">Select</option>
                                     <option value="Male">Male</option>
                                     <option value="Female">Female</option>
@@ -81,8 +96,22 @@
                                 <span class="required-asterisk">*</span>
                                 <span class="label-text">Treatment Brand</span>
                             </label>
-                            <div class="select-wrapper">
-                                <select id="treatmentBrand" name="treatmentBrand">
+                            <div class="custom-select-wrapper">
+                                <div class="custom-select" id="treatmentBrand-select">
+                                    <div class="custom-select__trigger">
+                                        <span class="custom-select__placeholder">Select</span>
+                                        <div class="custom-select__arrow">
+                                            <img src="/assets/images/select-icon.svg" alt="Select Tick Icon">
+                                        </div>
+                                    </div>
+                                    <div class="custom-select__options">
+                                        <span class="custom-select__option" data-value="DCA Pro">DCA Pro</span>
+                                        <span class="custom-select__option" data-value="Diamond Aligner">Diamond Aligner</span>
+                                        <span class="custom-select__option" data-value="OEM-Plain">OEM-Plain</span>
+                                        <span class="custom-select__option" data-value="OEM-Clinic Brand">OEM-Clinic Brand</span>
+                                    </div>
+                                </div>
+                                <select id="treatmentBrand" name="treatmentBrand" style="display: none;">
                                     <option value="">Select</option>
                                     <option value="DCA Pro">DCA Pro</option>
                                     <option value="Diamond Aligner">Diamond Aligner</option>
@@ -204,8 +233,21 @@
                                 <span class="required-asterisk">*</span>
                                 <span class="label-text">IPR</span>
                             </label>
-                            <div class="select-wrapper">
-                                <select id="ipr" name="ipr">
+                            <div class="custom-select-wrapper">
+                                <div class="custom-select" id="ipr-select">
+                                    <div class="custom-select__trigger">
+                                        <span class="custom-select__placeholder">Select</span>
+                                        <div class="custom-select__arrow">
+                                            <img src="/assets/images/select-icon.svg" alt="Select Tick Icon">
+                                        </div>
+                                    </div>
+                                    <div class="custom-select__options">
+                                        <span class="custom-select__option" data-value="Yes">Yes</span>
+                                        <span class="custom-select__option" data-value="No">No</span>
+                                        <span class="custom-select__option" data-value="As Recommended">As Recommended</span>
+                                    </div>
+                                </div>
+                                <select id="ipr" name="ipr" style="display: none;">
                                     <option value="">Select</option>
                                     <option value="Yes">Yes</option>
                                     <option value="No">No</option>
@@ -219,8 +261,21 @@
                                 <span class="required-asterisk">*</span>
                                 <span class="label-text">Attachments</span>
                             </label>
-                            <div class="select-wrapper">
-                                <select id="attachments" name="attachments">
+                            <div class="custom-select-wrapper">
+                                <div class="custom-select" id="attachments-select">
+                                    <div class="custom-select__trigger">
+                                        <span class="custom-select__placeholder">Select</span>
+                                        <div class="custom-select__arrow">
+                                            <img src="/assets/images/select-icon.svg" alt="Select Tick Icon">
+                                        </div>
+                                    </div>
+                                    <div class="custom-select__options">
+                                        <span class="custom-select__option" data-value="Yes">Yes</span>
+                                        <span class="custom-select__option" data-value="No">No</span>
+                                        <span class="custom-select__option" data-value="As Recommended">As Recommended</span>
+                                    </div>
+                                </div>
+                                <select id="attachments" name="attachments" style="display: none;">
                                     <option value="">Select</option>
                                     <option value="Yes">Yes</option>
                                     <option value="No">No</option>
@@ -250,8 +305,20 @@
                                 <span class="required-asterisk">*</span>
                                 <span class="label-text">Model Type</span>
                             </label>
-                            <div class="select-wrapper">
-                                <select id="modelType" name="modelType">
+                            <div class="custom-select-wrapper">
+                                <div class="custom-select" id="modelType-select">
+                                    <div class="custom-select__trigger">
+                                        <span class="custom-select__placeholder">Select</span>
+                                        <div class="custom-select__arrow">
+                                            <img src="/assets/images/select-icon.svg" alt="Select Tick Icon">
+                                        </div>
+                                    </div>
+                                    <div class="custom-select__options">
+                                        <span class="custom-select__option" data-value="Digital Model">Digital Model</span>
+                                        <span class="custom-select__option" data-value="Plaster Model">Plaster Model</span>
+                                    </div>
+                                </div>
+                                <select id="modelType" name="modelType" style="display: none;">
                                     <option value="">Select</option>
                                     <option value="Digital Model">Digital Model</option>
                                     <option value="Plaster Model">Plaster Model</option>
