--- a/assets/css/add_case.css
+++ b/assets/css/add_case.css
@@ -1218,3 +1218,28 @@ body {
         transform: translateX(0);
     }
 }
+
+.clear-photo {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    line-height: 22px;
+    font-size: 18px;
+    cursor: pointer;
+    z-index: 10;
+    color: #333;
+    font-weight: bold;
+}
+
+.clear-photo:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+.photo-upload {
+    position: relative;
+}
